feat:products add inventories
