# app/Models/Inventory.php
@@ -1,0 +1,29 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class Inventory extends Model
+{
+    use HasFactory;
+
+    protected $fillable = [
+        'color',
+        'size',
+        'amount',
+        'product_id'
+    ];
+
+    protected $hidden = [
+        'product_id',
+        'created_at',
+        'updated_at'
+    ];
+
+    public function product()
+    {
+        return $this->belongsTo(Product::class);
+    }
+}
