# routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\ProductController;
+use App\Models\Product;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -8,5 +9,6 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
 });
 
-Route::get('/products/{category_name}', [ProductController::class, 'index'])->name('products.index');
 Route::get('/products/{category_name}/{product}', [ProductController::class, 'show'])->name('products.show');
+Route::get('/products/{category_name}', [ProductController::class, 'index'])->name('products.index');
+Route::get('/products', [ProductController::class, 'indexAll'])->name('products.indexAll');
